--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.3",
   "description": "Google API client wrapper for Vue",
   "author": "CedricPoilly <cedricpoilly@outlook.com>",
-  "homepage": "https://github.com/CedricPoilly/vue-gapi",
   "main": "dist/vue-gapi.common.js",
   "module": "dist/vue-gapi.esm.js",
   "browser": "dist/vue-gapi.js",
@@ -124,6 +123,14 @@
       "ansi-html",
       "style-loader/addStyles.js"
     ]
+  },
+  "homepage": "https://github.com/CedricPoilly/vue-gapi#readme",
+  "bugs": {
+    "url": "https://github.com/vuejs/vue/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CedricPoilly/vue-gapi.git"
   },
   "license": {
     "type": "MIT",
