fixed link for issues

--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
   },
   "homepage": "https://github.com/CedricPoilly/vue-gapi#readme",
   "bugs": {
-    "url": "https://github.com/vuejs/vue/issues"
+    "url": "https://github.com/CedricPoilly/vue-gapi/issues"
   },
   "repository": {
     "type": "git",
