--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.4",
+    "whatwg-fetch": "^3.0.0",
     "yarn-or-npm": "^2.0.0"
   },
   "peerDependencies": {
