--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Lock File for yarn
+yarn.lock
+
 # Runtime data
 pids
 *.pid
@@ -56,4 +59,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
