Please enter the commit message for your changes. Lines starting developipng with '#' will be ignored, and an empty message aborts the commit.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "CedricPoilly <cedricpoilly@outlook.com>",
   "main": "dist/vue-gapi.common.js",
   "module": "dist/vue-gapi.esm.js",
-  "browser": "dist/vue-gapi.js",
+  "browser": "dist/vue-gapi.common.js",
   "unpkg": "dist/vue-gapi.js",
   "style": "dist/vue-gapi.css",
   "files": [
