--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "postcss": "^6.0.23",
     "postcss-cssnext": "^2.10.0",
     "pre-commit": "^1.2.0",
+    "prettier": "^2.0.5",
     "rimraf": "^2.6.0",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
@@ -138,5 +139,6 @@
     "type": "git",
     "url": "git+https://github.com/CedricPoilly/vue-gapi.git"
   },
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {}
 }
