--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "eslint-plugin-vue": "^2.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "^23.6.0",
+    "jest": "^26.0.1",
     "karma": "^1.7.0",
     "karma-chai-dom": "^1.1.0",
     "karma-chrome-launcher": "^2.1.0",
@@ -139,6 +139,6 @@
     "type": "git",
     "url": "git+https://github.com/CedricPoilly/vue-gapi.git"
   },
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {}
 }
