Upgrade Babel and Jest
* Removes unnecessary Babel plugins
* Upgrades @babel/core from 6.26.3 to 7.10.3
* Upgrades jest from 23.6.0 to 26.1.0

--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,15 @@
 {
   "presets": [
     [
-      "env",
-    {
-      "targets": {
-        "browsers": [
-          "last 2 versions"
-        ]
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [
+            "last 2 versions"
+          ]
+        }
       }
-    }
     ]
-  ],
-  "plugins": [
-    "transform-vue-jsx",
-    "transform-object-rest-spread"
   ],
   "env": {
     "test": {
