--- a/package.json
+++ b/package.json
@@ -39,17 +39,12 @@
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "add-asset-html-webpack-plugin": "^2.1.3",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.0",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
     "buble": "^0.15.2",
     "chai": "^3.5.0",
     "chai-dom": "^1.8.0",
@@ -62,7 +57,7 @@
     "eslint-plugin-vue": "^2.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "^23.6.0",
+    "jest": "^26.1.0",
     "karma": "^1.7.0",
     "karma-chai-dom": "^1.1.0",
     "karma-chrome-launcher": "^2.1.0",
