--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "module": "dist/vue-gapi.esm.js",
   "browser": "dist/vue-gapi.common.js",
   "unpkg": "dist/vue-gapi.js",
-  "style": "dist/vue-gapi.css",
   "files": [
     "dist",
     "src"
@@ -15,96 +14,53 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "node build/build.js",
-    "build:dll": "webpack --progress --config build/webpack.config.dll.js",
-    "lint": "yon run lint:js && yon run lint:css",
+    "lint": "yon run lint:js",
     "lint:js": "eslint --ext js --ext jsx --ext vue src test/**/*.spec.js test/*.js build",
     "lint:js:fix": "yon run lint:js -- --fix",
-    "lint:css": "stylelint src/**/*.{vue,css}",
     "lint:staged": "lint-staged",
     "pretest": "yon run lint",
     "testing": "jest",
-    "dev": "webpack-dashboard -- webpack-dev-server --config build/webpack.config.dev.js --open",
     "prepublish": "yon run build"
   },
   "lint-staged": {
     "*.{vue,jsx,js}": [
       "eslint --fix"
-    ],
-    "*.{vue,css}": [
-      "stylefmt",
-      "stylelint"
     ]
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "add-asset-html-webpack-plugin": "^2.1.3",
     "babel-eslint": "^7.2.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^4.1.6",
     "buble": "^0.15.2",
-    "clean-css": "^4.2.1",
-    "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "eslint-config-vue": "^2.0.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-vue": "^2.0.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
     "jest": "^26.1.0",
     "lint-staged": "^3.4.0",
     "mkdirp": "^0.5.1",
     "parse": "^2.1.0",
     "parse5": "^2.1.0",
-    "postcss": "^6.0.23",
-    "postcss-cssnext": "^2.10.0",
     "pre-commit": "^1.2.0",
     "prettier": "^2.0.5",
     "rimraf": "^2.6.0",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.4.1",
-    "rollup-plugin-jsx": "^1.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-postcss": "^0.4.1",
     "rollup-plugin-replace": "^1.1.0",
-    "rollup-plugin-vue": "^2.3.0",
-    "style-loader": "^0.17.0",
-    "stylefmt": "^5.3.0",
-    "stylelint": "^7.10.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-processor-html": "^1.0.0",
     "uglify-js": "^3.4.7",
     "uppercamelcase": "^3.0.0",
     "vue": "^2.5.17",
-    "vue-loader": "^12.0.0",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^2.5.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^3.1.11",
-    "webpack-merge": "^4.1.4",
     "whatwg-fetch": "^3.0.0",
     "yarn-or-npm": "^2.0.0"
   },
   "peerDependencies": {
     "vue": "^2.3.0"
-  },
-  "dllPlugin": {
-    "name": "vuePluginTemplateDeps",
-    "include": [
-      "style-loader!css-loader!mocha-css",
-      "html-entities",
-      "vue/dist/vue.js",
-      "core-js/library",
-      "url",
-      "sockjs-client",
-      "vue-style-loader/lib/addStylesClient.js",
-      "events",
-      "ansi-html",
-      "style-loader/addStyles.js"
-    ]
   },
   "homepage": "https://github.com/CedricPoilly/vue-gapi#readme",
   "bugs": {
