--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,6 @@
 {
   "root": true,
-  "extends": [
-    "eslint:recommended",
-    "plugin:vue/recommended",
-    "prettier"
-  ],
+  "extends": ["eslint:recommended", "plugin:vue/recommended", "prettier"],
   "globals": {
     "requestAnimationFrame": true,
     "performance": true,
