--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "clean": "rimraf dist",
     "build": "node build/build.js",
     "lint": "yon run lint:eslint && yon run lint:prettier",
-    "lint:eslint": "eslint --ext js build src test",
+    "lint:eslint": "eslint --ext js .",
     "lint:prettier": "prettier --check \"{**/*,*}.{js,json}\"",
     "lint:staged": "lint-staged",
     "test": "jest",
     "prepublish": "yon run build"
   },
   "lint-staged": {
-    "*.{vue,jsx,js}": [
+    "*.js": [
       "eslint --fix"
+    ],
+    "*.{js,json}": [
+      "prettier --write"
     ]
   },
   "pre-commit": "lint:staged",
@@ -36,7 +39,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.1.0",
-    "lint-staged": "^3.4.0",
+    "lint-staged": "^10.2.11",
     "mkdirp": "^0.5.1",
     "pre-commit": "^1.2.0",
     "prettier": "^2.0.5",
