Configure lint continuous integration (#65)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,14 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ]
-    }
+  "root": true,
+  "extends": ["eslint:recommended", "plugin:vue/recommended", "prettier"],
+  "globals": {
+    "requestAnimationFrame": true,
+    "performance": true,
+    "window": true
+  },
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true
+  }
 }
