--- a/package.json
+++ b/package.json
@@ -14,36 +14,33 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "node build/build.js",
-    "lint": "yon run lint:js",
-    "lint:js": "eslint --ext js --ext jsx --ext vue src test/**/*.spec.js test/*.js build",
-    "lint:js:fix": "yon run lint:js -- --fix",
+    "lint": "yon run lint:eslint && yon run lint:prettier",
+    "lint:eslint": "eslint --ext js .",
+    "lint:prettier": "prettier --check \"{**/*,*}.{js,json}\"",
     "lint:staged": "lint-staged",
-    "pretest": "yon run lint",
-    "testing": "jest",
+    "test": "jest",
     "prepublish": "yon run build"
   },
   "lint-staged": {
-    "*.{vue,jsx,js}": [
+    "*.js": [
       "eslint --fix"
+    ],
+    "*.{js,json}": [
+      "prettier --write"
     ]
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "babel-eslint": "^7.2.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-istanbul": "^4.1.6",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
     "buble": "^0.15.2",
-    "eslint": "^4.18.2",
-    "eslint-config-vue": "^2.0.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-vue": "^2.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.1.0",
-    "lint-staged": "^3.4.0",
+    "lint-staged": "^10.2.11",
     "mkdirp": "^0.5.1",
-    "parse": "^2.1.0",
-    "parse5": "^2.1.0",
     "pre-commit": "^1.2.0",
     "prettier": "^2.0.5",
     "rimraf": "^2.6.0",
@@ -51,7 +48,6 @@
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.4.1",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-postcss": "^0.4.1",
     "rollup-plugin-replace": "^1.1.0",
     "uglify-js": "^3.4.7",
     "uppercamelcase": "^3.0.0",
