--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,7 +1,7 @@
 name: docs
 on:
   push:
-#    branches: [master] # @todo uncomment this
+    branches: [master]
 jobs:
   generate:
     runs-on: ubuntu-latest
