--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,7 +1,7 @@
 name: docs
 on:
   push:
-    branches: [master]
+    # branches: [master]
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -18,9 +18,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Generate documentation
-        run: npm run jsdoc
+        run: npm run docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./docs/.vuepress/dist
