Move to generated VuePress documentation (#112)

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,9 +18,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Generate documentation
-        run: npm run jsdoc
+        run: npm run docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./docs/.vuepress/dist
