--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint:staged": "lint-staged",
     "test": "jest",
     "prepublish": "npm run build",
-    "jsdoc": "jsdoc --recurse --destination docs src README.md"
+    "docs": "vuepress-jsdoc --source ./src --dist ./docs --folder . --readme ./README.md --rmPattern=./docs/README.md --partials ./docs/.vuepress/partials/*.hbs && vuepress build ./docs"
   },
   "lint-staged": {
     "*.js": [
@@ -43,7 +43,6 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-vue": "^7.1.0",
     "jest": "^26.1.0",
-    "jsdoc": "^3.6.5",
     "lint-staged": "^10.2.11",
     "pre-commit": "^1.2.0",
     "prettier": "^2.0.5",
@@ -51,7 +50,9 @@
     "rollup": "^2.23.0",
     "uglify-js": "^3.10.1",
     "uppercamelcase": "^3.0.0",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vuepress": "^1.8.0",
+    "vuepress-jsdoc": "^3.2.0"
   },
   "peerDependencies": {
     "vue": "^2.3.0"
