Add TypeScript type definitions (#111)

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vue-gapi",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Google API Client Library wrapper for Vue.js",
   "author": "CedricPoilly <cedricpoilly@outlook.com>",
   "main": "dist/vue-gapi.common.js",
   "module": "dist/vue-gapi.esm.js",
   "browser": "dist/vue-gapi.common.js",
   "unpkg": "dist/vue-gapi.js",
+  "types": "./vue-gapi.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "vue-gapi.d.ts"
   ],
   "scripts": {
     "clean": "rimraf dist",
@@ -66,5 +68,8 @@
     "url": "git+https://github.com/vue-gapi/vue-gapi.git"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.52"
+  }
 }
