--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master]
 jobs:
-  test:
+  all:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -20,19 +20,7 @@ jobs:
         run: npm ci
       - name: Run unit tests
         run: npm test
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Read .nvmrc
-        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
-        id: nvm
-      - name: Use Node.js ${{ steps.nvm.outputs.NVMRC }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: '${{ steps.nvm.outputs.NVMRC }}'
-      - name: Install dependencies
-        run: npm ci
       - name: Check code style
         run: npm run lint
+      - name: Generate docs
+        run: npm run docs
