--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -12,9 +12,10 @@ jobs:
         run: echo ::set-output name=NVMRC::$(cat .nvmrc)
         id: nvm
       - name: Use Node.js ${{ steps.nvm.outputs.NVMRC }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '${{ steps.nvm.outputs.NVMRC }}'
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Generate documentation
