--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,14 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: npm
       - run: npm ci
-      - run: npm publish
+      - name: set npm tag
+        id: npm
+        run: |
+          if [ ${{ github.event_name }} == 'release' ]; then
+            echo "::set-output name=tag::latest"
+          else
+            echo "::set-output name=tag::next"
+          fi
+      - run: npm publish --tag ${{ steps.npm.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
