--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,6 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: 'npm deprecate vue-gapi "This plugin is deprecated. We encourage you to migrate to Vue3 Google Sign-in: https://vue3-google-signin.syetalabs.io"'
+      - run: 'npm deprecate vue-gapi "This plugin is deprecated. We encourage you to migrate to Vue3 Google Sign-in: https://github.com/wavezync/vue3-google-signin"'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
